opam-version: "1.2"
authors: ["Arena Developers <silver-snakes@arena.io>"]
maintainer: "silver-snakes@arena.io"
homepage: "https://github.com/arenadotio/pgx"
dev-repo: "https://github.com/arenadotio/pgx.git"
bug-reports: "https://github.com/arenadotio/pgx/issues"
doc: "https://arenadotio.github.io/pgx/doc"

build: ["dune" "build" "-p" name "-j" jobs]
build-test: ["dune" "runtest" "-p" name "-j" jobs]

depends: [
  "ppx_jane"
  "uuidm"
  "re"
  "sexplib0" {>= "v0.11.0"}

  "bisect_ppx" {build & >= "1.3.1"}
  "dune" {build & >= "1.1.0"}

  "base64" {test}
  "ounit" {test}
]

available: [ocaml-version >= "4.05.0"]
