opam-version: "2.0"
authors: ["Arena Developers <silver-snakes@arena.io>"]
maintainer: "Arena Developers <silver-snakes@arena.io>"
homepage: "https://github.com/arenadotio/pgx"
dev-repo: "git+https://github.com/arenadotio/pgx.git"
bug-reports: "https://github.com/arenadotio/pgx/issues"
doc: "https://arenadotio.github.io/pgx/doc"

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.05.0"}
  "pgx"
  "lwt"

  "alcotest" {with-test}
  "alcotest-lwt" {with-test}
  "base64" {with-test}
]
