(executables
  (names test_pgx_async test_pgx_async_conversions)
  (libraries pgx_async pgx_test oUnit)
	(preprocess (pps ppx_jane)))

(alias
  (name runtest)
  (package pgx_async)
  (deps (:exe test_pgx_async.exe))
  (action (run %{exe})))

(alias
  (name runtest)
  (package pgx_async)
  (deps (:exe test_pgx_async_conversions.exe))
  (action (run %{exe})))
